Started with the tutorials. Finalized landing page, provided outlines for the tutorials

--- a/documentation/source/general/tutorial/BE_tutorial/BE_applications.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_applications.ipynb
@@ -5,6 +5,17 @@
    "id": "b286314c",
    "metadata": {},
    "source": [
+    "# Part II: Advanced Applications and executing Algorithms\n",
+    "\n",
+    "With getting familiar with the basic functionalities of the BlockEncoding class in the previous tutorial, we now shift up a gear and tackle some of the recent, relevant open questions. We explore and showcase the methods that allow you to use the BlockEncodings for:\n",
+    "\n",
+    "- Qubitization: Leverage .qubitization and .chebyshev to walk through Krylov subspaces with optimal query complexity.\n",
+    "\n",
+    "- Solving Linear Systems: Perform matrix inversion on the block encoding of your construction with ``.inv``.\n",
+    "\n",
+    "- Polynomial Transformations: Apply an arbitrary polynomial transformation of a matrix in either the polynomial or Chebyshev basis using ``.poly``. This is also useful to perform GQSP filtering, which is a topic of a separate tutorial.\n",
+    "\n",
+    "- Hamiltonian simulation: Want to perform a Hamiltonian simulation with your block encoding? Sure, by all means... ``.sim`` can help with that.\n",
     "### Resource estimation using ``.resources``\n",
     "\n",
     "EXPLAIN"
@@ -59,6 +70,66 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "26d71afe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfe95e39",
+   "metadata": {},
+   "source": [
+    "#### Inverse using ``.inv``\n",
+    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e8d3eb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d2bffaa",
+   "metadata": {},
+   "source": [
+    "#### Polynomial transformations using ``.poly``\n",
+    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2842dced",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9c953f0",
+   "metadata": {},
+   "source": [
+    "#### Hamiltnian simulation using ``.sim``\n",
+    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33010980",
    "metadata": {},
    "outputs": [],
    "source": [
