--- a/documentation/source/general/tutorial/BE_tutorial/BE_construct.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_construct.ipynb
@@ -5,20 +5,68 @@
    "id": "34b89908",
    "metadata": {},
    "source": [
-    "### how to construct a BE object (quantum numpy)\n",
+    "# Part I: From Theory to Code: Constructing a BlockEncoding\n",
     "\n",
-    "#### ``from_operator``\n",
-    "Explain that it block‑encodes the Hermitian part of the operator and internally uses a Pauli decomposition.​"
+    "If you’ve already delved into the theory of Qubitization and Quantum Signal Processing (GSP/GQSP) in our previous tutorial, you know the drill. If you skipped them because you were eager to see code... no judgment, this is a safe space! Here is all the tl;dr you need to catch up and tag along.\n",
+    "\n",
+    "At its core, a block encoding embeds a non-unitary matrix $A$ (which might not even be square) into the top-left corner of a larger unitary matrix $U$. If we can implement $U$, we can \"apply\" $A$ to a quantum state by projecting onto the correct subspace. Mathematically, a unitary $U$ is an $(\\alpha, a, \\epsilon)$-block-encoding of $A$ if:$$\\| A - \\alpha (\\bra{0}^a \\otimes I) U (\\ket{0}^a \\otimes I) \\| \\leq \\epsilon$$ \n",
+    "In Qrisp, we turn this mathematical definition into a functional object that you can add, multiply, and transform just like a standard variable.\n",
+    "\n",
+    "That's it. That's all the theory you need to grasp for you to follow this series showcasing how to, among other things, apply polynomial filtering to get a better idea of the ground state! How cool does that sound! If you'd like to delve deeper into the theory, check out the theoretically more rigorous introduction in the theoretical tutorial.\n",
+    "\n",
+    "In this tutorial we focus on the \"How.\" You will learn to generate block encodings from various sources:\n",
+    "\n",
+    "- Constructors: Use ``.from_operator``, ``.from_array``, or the powerful ``.from_LCU`` (Linear Combination of Unitaries).\n",
+    "\n",
+    "- Arithmetic with BlockEncodings: Perform \"Quantum Algebra\" using standard Pythonic syntax. Need to add two matrices? Just use ``A + B``. Want to scale an operator? Boom. ``0.5 * A``. Multiply two block encodings? ``A @ B``... You get the idea.\n",
+    "\n",
+    "- Execution and Quantum Resource Analysis: Move from abstraction to reality. ``.apply()`` automatically synthesizes the gates (no hand weaving circuits, I promise!), handling all ancilla management. For simulation, ``.apply_rus`` invokes a Repeat-Until-Success procedure returning the result only if the all ancillas are measured in $\\ket{0}$. To peek under the hood and see exactly how many gates of all kind, you can use the ``.resources`` method.\n",
+    "\n",
+    "## Constructing your first BlockEncoding\n",
+    "The BlockEncoding class is designed to meet you wherever you are in your workflow. There are three primary ways to bring an operator into the Qrisp environment: :ref:`.from_array`, :ref:`.from_operator`, and :ref:`.from_LCU`. Let's take a look at how each of them work and how we can use them.\n",
+    "\n",
+    "### :ref:`.from_array`\n",
+    "If you are coming from a data science or numerical analysis background, you likely have your data in a matrix. In that case, the :ref:`from_array` is the bridge designed for you. Well as long as the matrix is square and its size $N$ must be a power of two. If this is not the case, fear not, you can always pad the reamaining rows and columns accordingly. The method supports various formats including numpy.ndarray, scipy.sparse.csr_array, and csr_matrix. A quick example would look something like this:\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "50358088",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulating 3 qubits.. |                                                      | [  0%]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cx': 64, 'x': 9, 'u3': 6, 't': 24, 'cz': 5, 'cy': 2, 'h': 16, 'p': 3, 't_dg': 32, 'gphase': 2}\n"
+     ]
+    }
+   ],
    "source": [
-    "###### EXAMPLE"
+    "import numpy as np\n",
+    "from qrisp import QuantumFloat\n",
+    "from qrisp.block_encodings import BlockEncoding\n",
+    "\n",
+    "# A 4x4 matrix (power of two)\n",
+    "A = np.array([[0, 1, 0, 1],\n",
+    "              [1, 0, 0, 0],\n",
+    "              [0, 0, 1, 0],\n",
+    "              [1, 0, 0, 0]])\n",
+    "\n",
+    "BE_A = BlockEncoding.from_array(A)\n",
+    "def operand_prep():\n",
+    "    return QuantumFloat(2)\n",
+    "print(BE_A.resources(operand_prep)())"
    ]
   },
   {
@@ -26,8 +74,9 @@
    "id": "5f650324",
    "metadata": {},
    "source": [
-    "#### ``.from_array``\n",
-    "Square matrix, size a power of two, supports `ndarray`, `csrarray`, `csrmatrix`.​"
+    "### ``from_operator``\n",
+    "\n",
+    "This method is your go-to for standard quantum operators. It block-encodes the Hermitian part of the operator: $\\frac{O + O^\\dagger}{2}$. Internally, it performs a Pauli decomposition, breaking the operator down into a sum of Pauli strings which are then block encoded."
    ]
   },
   {
@@ -37,7 +86,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### EXAMPLE"
+    "from qrisp.block_encodings import BlockEncoding\n",
+    "from qrisp.operators import X, Y\n",
+    "\n",
+    "# Define an operator\n",
+    "H = X(0)*X(1) + 0.2*Y(0)*Y(1)\n",
+    "\n",
+    "# Create BlockEncoding\n",
+    "BE_H = BlockEncoding.from_operator(H)\n",
+    "print(BE_H.resources(operand_prep)())"
    ]
   },
   {
@@ -46,9 +103,7 @@
    "metadata": {},
    "source": [
     "#### ``.from_LCU``\n",
-    "Introduce `BlockEncoding.from_lcu(coeffs, unitaries)` and the PREP–SEL–PREP† construction.​\n",
-    "\n",
-    "Explain padding of coefficients, normalization α=∑i∣αi∣α=∑i∣αi∣, sign handling via additional phase flips, and how `qswitch` is used inside. ​"
+    "The Linear Combination of Unitaries (LCU) protocol is the \"manual transmission\" of block encoding. It constructs the unitary via the PREP–SEL–PREP† sequence.Normalization: The scaling factor is $\\alpha = \\sum_i |\\alpha_i|$.Sign Handling: If a coefficient is negative, Qrisp automatically adds a phase flip (Z-gate/gphase) to the corresponding unitary.Padding: If your list of coefficients isn't a power of two, Qrisp pads it with zeros.Mechanism: It uses q_switch internally to perform the SEL (Select) operation, applying $U_i$ conditioned on the ancilla state."
    ]
   },
   {
@@ -58,9 +113,172 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### EXAMPLE\n",
+    "from qrisp import *\n",
+    "from qrisp.block_encodings import BlockEncoding\n",
+    "import numpy as np\n",
     "\n",
-    "### EXAMPLE: Laplacian example already in the doc (1D discrete Laplace), show how to write `unitaries = [I, V, V_dag]` and `coeffs`, then `BE = BlockEncoding.from_lcu(coeffs, unitaries)`.​\n"
+    "# Define the unitaries\n",
+    "def I(qv): pass\n",
+    "\n",
+    "def V(qv):\n",
+    "    qv += 1\n",
+    "    gphase(np.pi, qv[0]) # Negative sign\n",
+    "\n",
+    "def V_dg(qv):\n",
+    "    qv -= 1\n",
+    "    gphase(np.pi, qv[0]) # Negative sign\n",
+    "\n",
+    "unitaries = [I, V, V_dg]\n",
+    "coeffs = np.array([2.0, 1.0, 1.0])\n",
+    "\n",
+    "BE_laplace = BlockEncoding.from_lcu(coeffs, unitaries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f366bc0",
+   "metadata": {},
+   "source": [
+    "#### Arithmetic and Composition of BlockEncodings\n",
+    "\n",
+    "Qrisp allows you to combine BlockEncoding objects using standard Python operators. These operations are not just mathematical abstractions; they dynamically construct new quantum circuits based on the underlying LCU or sequencing logic.\n",
+    "\n",
+    "##### addition ``__add__``\n",
+    "\n",
+    "Combines two block encodings $A$ and $B$ into $A + B$. It uses an additional ancilla qubit to \"decide\" which block encoding to apply, scaling the total $\\alpha$ to $\\alpha_A + \\alpha_B$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1d86097",
+   "metadata": {},
+   "source": [
+    "| Operation     | Python Syntax | Resulting Operator | New α     | Mechanism                                                                 |\n",
+    "|---------------|---------------|--------------------|-----------|---------------------------------------------------------------------------|\n",
+    "| Addition      | A + B         | A+B                | α_A + α_B | Adds an ancilla qubit to select between U_A and U_B.                      |\n",
+    "| Subtraction   | A - B         | A−B                | α_A + α_B | Same as addition, but with a relative π phase flip.                       |\n",
+    "| Scalar Mult.  | c * A         | c⋅A                | c         |                                                                           |\n",
+    "| Negation      | -A            | −A                 | α_A       | Applies a global phase of π to the unitary.                               |\n",
+    "| Matrix Mult.  | A @ B         | A⋅B                | α_A ⋅ α_B | Sequences the unitaries U_B then U_A.                                     |\n",
+    "| Kronecker     | A.kron(B)     | A⊗B                | α_A ⋅ α_B | Applies unitaries in parallel on separate registers.                      |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b250a065",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8560f537",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BE_sum = BE1 + BE2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a633eaf2",
+   "metadata": {},
+   "source": [
+    "##### subtraction ``__sub__``\n",
+    "\n",
+    "Similar to addition, but it applies a phase flip to the second operator to effectively compute $A - B$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df4aa474",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BE_diff = BE1 - BE2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97530410",
+   "metadata": {},
+   "source": [
+    "##### scalar multiplication ``__mul__``\n",
+    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb3601e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a11c582",
+   "metadata": {},
+   "source": [
+    "##### matrix multiplication ``__matmul__``\n",
+    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb74e581",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbfa78d0",
+   "metadata": {},
+   "source": [
+    "##### kronecker product ``__.kron__``\n",
+    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1916eb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71d1124c",
+   "metadata": {},
+   "source": [
+    "##### negation ``__neg__``\n",
+    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9237b32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
    ]
   },
   {
@@ -68,9 +286,11 @@
    "id": "19a05d46",
    "metadata": {},
    "source": [
+    "### Qubitization and Chebyshev Polynomials\n",
+    "\n",
     "#### $n$-step Qubitization\n",
     "\n",
-    "EXPLAIN"
+    "Qubitization turns a block encoding of a Hermitian operator $H$ into a new unitary whose eigenvalues are $e^{\\pm i \\arccos(H/\\alpha)}$. Calling .qubitization() wraps your BE into this framework, usually adding a \"signal\" qubit to handle the reflection $(\\mathbb{I} - 2|0\\rangle\\langle 0|)$."
    ]
   },
   {
@@ -88,7 +308,8 @@
    "source": [
     "#### Chebyshev polynomial using ``.chebyshev``\n",
     "\n",
-    "EXPLAIN"
+    "The .chebyshev(k) method returns a block encoding of the $k$-th Chebyshev polynomial $T_k(A)$. This is the engine behind many spectral algorithms and function approximations.\n",
+    "This is an incredibly powerful method for function approximation. It returns a block encoding of $T_k(A)$, where $T_k$ is the $k$-th Chebyshev polynomial of the first kind.If _rescale=True, it returns $T_k(A)$.If _rescale=False, it returns $T_k(A/\\alpha)$."
    ]
   },
   {
@@ -98,73 +319,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### EXAMPLE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7497348",
-   "metadata": {},
-   "source": [
-    "#### Inverse using ``.inv``\n",
-    "\n",
-    "EXPLAIN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc0952c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### EXAMPLE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "75f1bb84",
-   "metadata": {},
-   "source": [
-    "#### Polynomial transformations using ``.poly``\n",
-    "\n",
-    "EXPLAIN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "036ce0b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### EXAMPLE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3a3c5d16",
-   "metadata": {},
-   "source": [
-    "#### Hamiltnian simulation using ``.sim``\n",
-    "\n",
-    "EXPLAIN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f645d34b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### EXAMPLE"
+    "# Create a 3rd degree Chebyshev polynomial of the operator\n",
+    "BE_cheb = BE.chebyshev(3)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qrisp_new",
+   "display_name": "Qrisp_BE",
    "language": "python",
    "name": "python3"
   },
@@ -178,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
