--- a/documentation/source/general/tutorial/BE_tutorial/BE_theory.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_theory.ipynb
@@ -5,11 +5,39 @@
    "id": "34b89908",
    "metadata": {},
    "source": [
-    "## LCU, block encoding, (G)QSP\n",
+    "# The Theoretical Bedrock: Connecting the Dots\n",
     "\n",
-    "### Block encoding 101\n",
+    "Before exploring the BlockEncoding class, we'll catch up on (just enough) theory to satisfy even the most rigorous academic. We'll dive into the math and connect the dots between a recent stream of publications (we're talking about papers who are all still less than a decade old!). \n",
     "\n",
-    "### Unification of Quantum Algorithms/QSP/GQSP/GQET"
+    "This tutorial will cover:\n",
+    "\n",
+    "- Block encodings: They allow us to embed a (possibly non-unitary) matrix $A$ (or a linear combination of them) into the top-left block of a larger unitary U. This makes $A$ \"quantum-applicable\". Once $U$ is implemented, repetaing this until the ancilla qubits are all measured in $\\ket{0}$ effectivelly applies $A$ to a quantum state.\n",
+    "\n",
+    "- Qubitization: Pairing a block encoded unitary with the reflection operator forms a walk operator acting on a small invariant subspace. This operator encodes the eigenvalues of $A$ as controllable rotations, forming the basis for block encoding Chebyshev polynomials, Childs-Kothari-Somma's algorithm, Hamiltonian simulation, and more. It's exactly these Chebyshevs that provide an optimal basis for bounded polynomial approximations. Take an inverse, for a popular example, to also entertain the QML fans among the readers and immediately plant the idea of solving linear systems and applying them as the basis for Quantum Support Vector Machines. I guess this kind of non-subliminal messaging is just messaging, huh?\n",
+    "\n",
+    "- Quantum Signal Processing (QSP): A sequence of carefully chosen single‑qubit phase rotations that implements polynomial transformations $P(A)$ on your block encoding as precisely (based on $\\epsilon$) and efficiently (based on $\\kappa$) as you'd like (or have the resources for). We'll of course also mention what these two parameters represent (precision and condition number for the impatient ones among you).\n",
+    "\n",
+    "- Generalized QSP (GQSP): Extends QSP to multiple operators and more flexible polynomial forms, handling the underlying phase calculations automatically. Enables advanced techniques such as spectral filtering (for ground‑state estimation) and quantum linear solvers. The (quantum) world is your oyster.\n",
+    "\n",
+    "## Block encoding 101\n",
+    "\n",
+    "## Qubitization\n",
+    "\n",
+    "## Block encoding Chebyshev polynomials\n",
+    "\n",
+    "## Quantum Signal Processing (QSP)\n",
+    "\n",
+    "### Quantum Eigenvalue and Singular Value Transformation\n",
+    "\n",
+    "### Generalized Quantum Signal Processing (GQSP)\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "With the results, lemmas, theorems, and corollaries from the past two years now converging, the theoretical pieces fell into place. Stepping a step away and observing the mosaic with the final pieces added allowed for seeing the bigger picture and provide the common denominator of all these papers, the block encoding, as a standalone programming abstraction in Qrisp.\n",
+    "\n",
+    "Since you've come this far down the theory rabbit-hole, the following tutorials will be a walk in the park, even if you're not that verse in programming. The syntax similar to numpy will make these concepts seem, at points, even too easy. The functionalities, seemingly simple pack quite a punch, I'll tell you that much.\n",
+    "\n",
+    "See you on the other side (or rather part of this webSITE)... Yeah, yeah, I'll see myself take a break before continuting this pedagogical journey..."
    ]
   }
  ],
