Added chebyshev, resources to doc; some minor doc improvements

--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -212,7 +212,7 @@
     "    E = H.expectation_value(filtered_psi_prep, precision=0.001)()\n",
     "    return E\n",
     "\n",
-    "print(main())\n",
+    "#print(main())\n",
     "# -0.6186466466466466"
    ]
   },
@@ -352,7 +352,7 @@
     "    E = H.expectation_value(filtered_psi_prep, precision=0.001)()\n",
     "    return E\n",
     "\n",
-    "print(main())\n",
+    "#print(main())\n",
     "# -0.6187347347347347 "
    ]
   },
