More doc improvements

--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -223,7 +223,7 @@
    "source": [
     "Indeed, we achieve a significantly lower energy -- hence, a higher overlap with the ground state -- for the transformed state after QSP. \n",
     "\n",
-    "**But, what just happened?**"
+    "**But, how does this work?**"
    ]
   },
   {
