--- a/documentation/source/general/tutorial/BE_tutorial/BE_theory.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_theory.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "545b2832",
    "metadata": {},
    "outputs": [],
@@ -148,20 +148,22 @@
    "source": [
     "Why even bother with ``.from_lcu`` then? Fair question. The answer hides in what's happening underneath, and the amount of **quantum resources** that these two methods use.\n",
     "\n",
-    "Woah, woah, woah?! Quantum resources? As in quanutm resources in Quantum Resource Estimation?\n",
+    "## Quantum Resource Estimation w/ ``.resources``\n",
     "\n",
-    "Yes.\n",
+    "\"Woah, woah, woah?! Quantum resources? As in quanutm resources in Quantum Resource Estimation?\" you ask.\n",
+    "\n",
+    "\"Yes.\", we answer.\n",
     "\n",
     "\"But isn't it currently a research endeavor about finding these exact resource estimates?!\"\n",
     "\n",
-    "Yes. But... with Qrisp we made it as simple, clean, and qrispy (had to go for it), as calling the ``.resources`` method.\n",
+    "\"Yes. But... with Qrisp we made it as simple, clean, and qrispy (had to go for it), as calling the ``.resources`` method.\"\n",
     "\n",
     "Let's see what do we get as an output:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2de958a2",
    "metadata": {},
    "outputs": [
@@ -169,17 +171,174 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'u3': 14, 'p': 4, 'gphase': 2, 'x': 9, 't_dg': 28, 'cy': 4, 'h': 14, 'cx': 67, 't': 21}K\n"
+      "Simulating 3 qubits.. |                                                      | [  0%]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'u3': 14, 't': 21, 'p': 4, 'h': 14, 'gphase': 2, 'cy': 4, 't_dg': 28, 'x': 9, 'cx': 67}K\n"
      ]
     }
    ],
    "source": [
     "from qrisp import QuantumFloat\n",
+    "\n",
     "def operand_prep():\n",
     "    return QuantumFloat(2)\n",
     "quantum_resources = B_L.resources(operand_prep)()\n",
     "print(quantum_resources)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82ea4287",
+   "metadata": {},
+   "source": [
+    "Alright, it's a dictionary with some letters (or a string of them), and a number. The former is the detailed **gate count**, or rather the number of every specific gate used in the application of the block encoding using ``.from_array``. The second number is the **depth** of the circuit (for lack of a better word - we're trying to eliminate this sacreligious word in qrisp), which is related to how long the calculation will take on an actual quantum computer. The longer it takes, the more likely that the qubits decohere, resulting in noisy results that tell us nothing.\n",
+    "\n",
+    "Let's get back on track. We've block encoded the Laplacian and gathered the resources... Let's now do the exact same thing, but more efficiently by constructing a custom block encoding with ``.from_lcu``.\n",
+    "\n",
+    "The Laplacian can be decomposed as $\\Delta = 2\\mathbb{1}-V-V^\\dagger$, where \n",
+    "\n",
+    "- $\\mathbb{1}$ is the identity, \n",
+    "\n",
+    "- $V$ is the forward shift operator: $V\\ket{k}=-\\ket{k+1 \\mod N}$, and \n",
+    "\n",
+    "- $V^\\dagger$ is the backward shift $V^\\dagger\\ket{k}=-\\ket{k-1\\mod N}$.\n",
+    "\n",
+    "The negative sign ensures Hermiticity and matches the chosen finite-difference convention.\n",
+    "\n",
+    "This decomposition fits naturally into the LCU framework:$$\\Delta=\\sum_{i=0}^2\\alpha_i U_i\\propto 2I+V+V^\\dagger$$\n",
+    "\n",
+    "This can be easily implemented in Qrisp with the built-in arithmetic it allows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fedc47d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qrisp import gphase\n",
+    "\n",
+    "def I(qv):\n",
+    "    # Identity: do nothing\n",
+    "    pass\n",
+    "\n",
+    "def V(qv):\n",
+    "    # Forward cyclic shift with a global phase -1\n",
+    "    qv += 1\n",
+    "    gphase(np.pi, qv[0])  # multiply by -1\n",
+    "\n",
+    "def V_dg(qv):\n",
+    "    # Backward cyclic shift with a global phase -1\n",
+    "    qv -= 1\n",
+    "    gphase(np.pi, qv[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "346d92b8",
+   "metadata": {},
+   "source": [
+    "Now combine them as a linear combination of unitaries with coefficients [2, 1, 1]:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5dc2a98b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unitaries = [I, V, V_dg]\n",
+    "coeffs = np.array([2.0, 1.0, 1.0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42f78d52",
+   "metadata": {},
+   "source": [
+    "And thats it... that's all the ingredients we need to define a custom block encoding with ``.from_lcu``. We just provide the coefficients and the unitaries, and the BlockEncoding class does all the management of the coefficients, ancillary qubits, and whatever else under the sun. In future releases we also want it to be able do perform ones taxes.\n",
+    "\n",
+    "All jokes aside, let's block encode this Laplacian and check the resources if it's actually more efficient (it is) before explaining why it's more efficient."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3211ebcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'p': 2, 't': 10, 't_dg': 12, 'x': 5, 'gphase': 2, 'u3': 6, 's': 2, 'h': 10, 'cx': 36, 'measure': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "BE = BlockEncoding.from_lcu(coeffs, unitaries)\n",
+    "quantum_resources = BE.resources(operand_prep)()\n",
+    "print(quantum_resources)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f0ff8cb",
+   "metadata": {},
+   "source": [
+    "Let's now compare the outputs.\n",
+    "\n",
+    "{'cy': 4, 'p': 4, 't': 21, 't_dg': 28, 'x': 9, 'gphase': 2, 'u3': 14, 'h': 14, 'cx': 67}\n",
+    "{'p': 2, 't': 10, 't_dg': 12, 'x': 5, 'gphase': 2, 'u3': 6, 's': 2, 'h': 10, 'cx': 36, 'measure': 2}\n",
+    "\n",
+    "Even if you don't know what any of the letters or strings actually mean, you already get the idea, that the values of the bottom dictionary are lower than the one on the top. To say it in quantum jargon, the ``.from_lcu`` is (much) more efficient than ``.from_array``, which is just a simpler interface to ``.from_operator``. \n",
+    "\n",
+    "Why is that? Well, it all comes down to which unitaries and how many do we want to combine to construct the block encoding. In the custom block encoding it's rather self apparent: we need three unitaries to construct the Laplacian, as seen above. The ``.from_array`` and ``.from_operator`` methods, on the other hand, construct block encodings by decomposing the Hamiltonian into a linear cobination of Pauli strings. If you're asking what is a Pauli string, here's a quick intuitive answer.\n",
+    "\n",
+    "Think of a Pauli string as a multi-qubit instruction. It is a sequence of Pauli operators (matrices) $I$, $X=\\sigma_X$, $Y=\\sigma_Y$, and $Z=\\sigma_Z$. Each individual Pauli matrix is a simple $2 \\times 2$ unitary matrix. When you have multiple qubits, you take the tensor product of these matrices. For example, a Pauli string for a 3-qubit system might look like $X \\otimes Z \\otimes I$ (often shortened to $XZI$).Because Pauli strings are both unitary and Hermitian, they are the \"gold standard\" for quantum hardware. If you can break an operator down into Pauli strings, a quantum computer knows exactly how to execute it.\n",
+    "\n",
+    "And this is exactly what the methods do. It takes an arbitrary squari matrix and expresses it as a weighted sum of these Pauli strings ($A=\\sum_j\\alpha_j P_j$), where $\\alpha_j$ is a scalar coefficient (aka a number) and $P_j$ is a Pauli string.\n",
+    "\n",
+    "When you use a method like .from_array, the algorithm has no \"intuition\" about the structure of your matrix. It performs a systematic projection of your matrix onto every possible Pauli string.For an $n$-qubit system, there are $4^n$ possible Pauli strings. If your matrix doesn't happen to align perfectly with the Pauli basis, the decomposition results in a massive list of strings, many with tiny coefficients. \n",
+    "\n",
+    "In the case of our 1D Laplacian, Pauli Decomposition might require up to 16 different Pauli strings to represent the matrix. LCU, on the other hand, requires only 3 custom unitaries (like the ones we manually defined) to represent the exact same matrix.\n",
+    "\n",
+    "Building a block encoding requires a number of \"ancilla\" qubits and gate operations proportional to the number of terms in your sum. The more terms, the more complex the circuit, leading to more noise, requiring more qubits. \n",
+    "\n",
+    "Having covered the different approaches to constructing block encoding and analysing their quantum resource requirements already sounds extremely useful for (at least) the academics among you who are working ond or developing new ways to block encode certain matrices. In that case, performing resource estimation on your approach is incredibly simple (calling ``.resources``) after the approach is implemented in Qrisp. If you'd like some help to implementing your approach, please reach out so that we can include it in future releases. The idea is to have many different methods implemented at one place so that the user can then always use the most efficient one for their problem based on the quantum resources they have at their disposal.\n",
+    "\n",
+    "Let's show how we can obtain the state we've successfully applied LCU onto, or run the simulation with the Repeat-Until-Success protocol."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d1c43d1",
+   "metadata": {},
+   "source": [
+    "## Applying BlockEncodings w/  ``.apply`` & ``.apply_rus``\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55378873",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72199b60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
