Finalized first iteration of BE vol.1 tutorial. Outlined the BE vol.2 tutorial

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -16,64 +16,18 @@
     "- Polynomial Transformations: Apply an arbitrary polynomial transformation of a matrix in either the polynomial or Chebyshev basis using ``.poly``. This is also useful to perform GQSP filtering, which is a topic of a separate tutorial.\n",
     "\n",
     "- Hamiltonian simulation: Want to perform a Hamiltonian simulation with your block encoding? Sure, by all means... ``.sim`` can help with that.\n",
-    "### Resource estimation using ``.resources``\n",
     "\n",
-    "EXPLAIN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07199f24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### EXAMPLE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f1c9d3e5",
-   "metadata": {},
-   "source": [
-    "### Applying a BlockEncoding (quantum LAPACK)\n",
+    "## Qubitization\n",
     "\n",
-    "Goal: Demonstrate how to actually use a `BlockEncoding` to act on states.\n",
+    "## Block encoding Chebyshev polynomials\n",
     "\n",
-    "#### ``.apply``\n",
-    "EXPLAIN\n",
+    "## Quantum Signal Processing (QSP)\n",
     "\n",
-    "EXPLAIN NISQ-FRIENDLY POST-SELECTION APPROACH"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a803f6a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### EXAMPLE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3522e058",
-   "metadata": {},
-   "source": [
-    "#### ``.apply_rus``\n",
+    "### Quantum Eigenvalue and Singular Value Transformation\n",
     "\n",
-    "EXPLAIN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26d71afe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### EXAMPLE"
+    "### Generalized Quantum Signal Processing (GQSP)\n",
+    "\n",
+    "## Conclusion\n"
    ]
   },
   {
